--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,8 @@ output: github_document
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "inst/pix/README-"
+  fig.path = "inst/pix/README-",
+  out.width = "600px"
 )
 
 library(unikn)  # load package
@@ -103,7 +104,7 @@ The **unikn** contains two categories of color palettes:
 
 Originally, the **unikn** package primarily provided the 16\ color palettes of the [University of Konstanz](https://www.uni-konstanz.de/):
 
-```{r pal-all, fig.align = 'center', fig.width = 6, out.width = "65%", fig.asp = .90}
+```{r pal-all, fig.align = 'center', fig.width = 6, out.width = "600px", fig.asp = .90}
 seecol("all_unikn")
 ```
 
@@ -114,7 +115,7 @@ Its key component is the ubiquitous use of a `Seeblau` color and a corresponding
 
 The default **unikn** color palette `pal_unikn` combines shades of `pal_seeblau` and `pal_grau` with the base R colors "white" and "black" into a diverging, symmetrical palette (of 11\ colors):
 
-```{r pal-unikn, eval = TRUE, fig.width = 6, fig.asp = .70, fig.align = 'center'}
+```{r pal-unikn, eval = TRUE, fig.width = 6, out.width = "550px", fig.asp = .70, fig.align = 'center'}
 seecol(pal_unikn)
 ```
 
@@ -145,7 +146,7 @@ A shorter version (with 10\ colors) and an alternative (with more muted colors f
 Several more specialized color palettes combine the elements of nine color hues. 
 The preferred colors are contained in palette\ `pal_unikn_pref`: 
 
-```{r pal-unikn-pref, eval = TRUE, fig.width = 6, fig.asp = .70, fig.align = 'center'}
+```{r pal-unikn-pref, eval = TRUE, fig.width = 6, out.width = "550px", fig.asp = .70, fig.align = 'center'}
 seecol(pal_unikn_pref)
 ```
 
@@ -220,7 +221,7 @@ In addition to the 16\ specific color palettes of the [University of Konstanz](h
 - [Princeton University](https://www.princeton.edu/): `uni_princeton_0`, `uni_princeton_1`, `uni_princeton_2` 
 
 
-```{r seecol-add-pals, fig.width = 7.2, out.width = "65%", fig.align = 'center', fig.asp = .90}
+```{r seecol-add-pals, fig.width = 7.2, out.width = "550px", fig.align = 'center', fig.asp = .90}
 # Inspect additional/alternative color palettes:
 seecol("add")
 ```
@@ -269,7 +270,7 @@ The `seecol()` function enables either inspections of an individual color palett
 
 Using `seecol()` on an individual color palette provides a quick overview over its colors and details: 
 
-```{r seecol-pref, fig.width = 7, out.width = "65%", fig.align = 'center', fig.asp = .80}
+```{r seecol-pref, fig.width = 7, out.width = "550px", fig.align = 'center', fig.asp = .80}
 # Inspect an individual color palette:
 seecol(pal = eth_pal,                      # a color palette / list of palettes / keyword
        col_brd = "white", lwd_brd = 5,     # color and width of borders
@@ -281,7 +282,7 @@ seecol(pal = eth_pal,                      # a color palette / list of palettes 
 When `seecol()` is used with a recognized keyword or a list of color palettes, the function displays a comparison between them. 
 When only some colors of a color palette are requested, the `seecol()` and `usecol()` functions provide reasonable subsets of a **unikn** palette: 
 
-```{r pal-n, fig.width = 6, out.width = "55%", fig.align = 'center', fig.asp = .75}
+```{r pal-n, fig.width = 6, out.width = "450px", fig.align = 'center', fig.asp = .75}
 # Compare a list of (scaled) color palettes: 
 seecol(pal = "grad_all", n = 3, 
        col_brd = "black", lwd_brd = .5,
@@ -297,7 +298,7 @@ This allows using colors in **base** R and most other R packages. For instance, 
 
 - the `barplot()` function of the **grDevices** package:
 
-```{r usecol-1, eval = TRUE, fig.width = 5, fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r usecol-1, eval = TRUE, fig.width = 5, out.width = "500px", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Mix some colors into a new palette:
 my_pal <- usecol(c(Seeblau, "white", Pinky), n = 9)
 
@@ -307,7 +308,7 @@ barplot(1/sqrt(1:9),  col = my_pal)
 
 - the `image()` function of the **graphics** package:
 
-```{r usecol-2, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
+```{r usecol-2, eval = TRUE, fig.width = 3.5, fig.height = 4, out.width = "250px", fig.show = 'hold', fig.align = 'center'}
 # Data:
 x <- y <- seq(-4 * pi, 4 * pi, len = 15)
 r <- sqrt(outer(x^2, y^2, "+"))
@@ -322,7 +323,7 @@ image(z = cos(r^2) * exp(-r/10),
 
 - the `ggplot()` function of the **ggplot2** package: 
 
-```{r usecol-ggplot-data, echo = FALSE, eval = TRUE, out.width = "55%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
+```{r usecol-ggplot-data, echo = FALSE, eval = TRUE, out.width = "550px", fig.asp = .618, fig.align = 'center', collapse = TRUE}
 # 0. Create data: ---- 
 
 # Example based on https://www.r-graph-gallery.com/137-spring-shapes-data-art/
@@ -348,7 +349,7 @@ rownames(df) <- NULL
 my_data <- df  # copy
 ```
 
-```{r usecol-ggplot2, eval = TRUE, out.width = "55%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
+```{r usecol-ggplot2, eval = TRUE, out.width = "550px", fig.asp = .618, fig.align = 'center', collapse = TRUE}
 # Mix a color gradient: 
 my_col <- usecol(c(Bordeaux, "white", Petrol), n = 50)
 
@@ -366,7 +367,7 @@ ggplot(my_data, aes(x = X, y = Y, fill = Group)) +
 
 The `demopal()` function provides a quick illustration of a pre-defined or modified color palette:
 
-```{r demopal, fig.width = 6, out.width = "55%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r demopal, fig.width = 6, out.width = "500px", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 demopal(usecol(uni_princeton_1, n = 7),  # use a modified color palette
         type = "curve", seed = 2)        # reproducible randomness
 ```
@@ -387,7 +388,7 @@ For instance, let's define a color palette of the well-known [Google](https://ww
 We can now use the new palette in visualizations (e.g., inspect it with the `seecol()` function, use it in visualizations, 
 or modify it further with the `usecol()` function):
 
-```{r newpal-google, fig.width = 5, fig.asp = .9, fig.align = 'center'}
+```{r newpal-google, fig.width = 5, out.width = "550px", fig.asp = .9, fig.align = 'center'}
 # 1. Choose colors:
 # Google logo colors (from <https://www.schemecolor.com/google-logo-colors.php>)
 
@@ -420,7 +421,7 @@ The `simcol()` and `grepal()` functions of **unikn** address both situations.
 
 - Which colors are similar to the "orange" of `uni_princeton_0`?
 
-```{r simcol-example, fig.width = 5, fig.asp = .9, fig.align = 'center'}
+```{r simcol-example, fig.width = 5, out.width = "500px", fig.asp = .9, fig.align = 'center'}
 simcol(col_target = uni_princeton_0["orange"], tol = 30)
 ```
 
@@ -435,7 +436,7 @@ Specifically, `grepal(pattern, x)` searches a color palette\ `x` (i.e., a vector
 By default, `grepal()` searches the `r length(colors())`\ named colors provided by `colors()` in **base**\ R. 
 To make the `grepal()` more flexible, its `pattern`\ argument can use regular expressions: 
 
-```{r grepal-example-1, fig.width = 5, fig.asp = .9, fig.align = 'center', message=FALSE}
+```{r grepal-example-1, fig.width = 5, out.width = "550px", fig.asp = .9, fig.align = 'center', message=FALSE}
 # Find colors matching a pattern: 
 deep_purple <- grepal(pattern = "deep|purple", plot = FALSE)
 
@@ -447,7 +448,7 @@ seecol(deep_purple,
 
 Providing a list of color palettes to the `pal` argument of `seecol()` allows comparing multiple color palettes: 
 
-```{r grepal-example-2, fig.width = 8, fig.asp = .30, fig.align = 'center', message=FALSE}
+```{r grepal-example-2, fig.width = 8, out.width = "600px", fig.asp = .30, fig.align = 'center', message=FALSE}
 # Find colors matching some term(s):
 olives  <- grepal("olive", plot = FALSE)
 oranges <- grepal("orange", plot = FALSE)
@@ -471,7 +472,7 @@ Beyond colors and color functions, **unikn** provides functions for plotting gra
 
 The `mark()` function allows emphasizing text by plotting it with colored background (to provide the functionality of "Markieren"):  
 
-```{r mark-new-plot, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 3, fig.height = 3}
+```{r mark-new-plot, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 3, out.width = "250px", fig.height = 3}
 mark(labels = c("Markieren", "ist ein Bestandteil", "von Studieren."), 
      x = 0, y = .8, y_layout = .03, cex = 1.5, new_plot = "slide")
 ```
@@ -480,7 +481,7 @@ mark(labels = c("Markieren", "ist ein Bestandteil", "von Studieren."),
 
 The `uline()` function allows emphasizing text by plotting it with colored underlining (to provide the functionality of "Unterstreichen"):  
 
-```{r uline-demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 3, fig.height = 3}
+```{r uline-demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 3, out.width = "250px", fig.height = 3}
 uline(labels = c("Linear", "Authentic", "Flexible", "Open", "Practical"), 
       x = .05, y = .9, y_layout = "even", cex = 1.1, font = 2, new_plot = "slide")
 ```
@@ -489,14 +490,14 @@ uline(labels = c("Linear", "Authentic", "Flexible", "Open", "Practical"),
 
 The `post()` function allows adding text to a rectangular `xbox` (to provide the functionality of "Merken"):  
 
-```{r post-demo-1, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 2}
+```{r post-demo-1, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, out.width = "200px", fig.height = 2}
 xbox(col = usecol(pal_seeblau[[5]]), dim = c(2, 2))
 post(labels = c("Für eine", "Kultur der", "Kreativität"), x = .1, y = .8, cex = 1.4, font = 2)
 ```
 
 The color and font parameters can be adjusted to obtain different looks:  
 
-```{r post-demo-2, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 2}
+```{r post-demo-2, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, out.width = "200px", fig.height = 2}
 post(labels = c("creative.", "together"), new_plot = "xbox", 
      y_layout = .02, cex = 2, font = c(1, 3),  
      col_bg = pal_seegruen[[1]], col = c(Petrol, Pinky))
@@ -506,7 +507,7 @@ post(labels = c("creative.", "together"), new_plot = "xbox",
 
 The `heading()` function is a convenient wrapper around `mark`:  
 
-```{r heading-demo-1, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 3}
+```{r heading-demo-1, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, out.width = "200px", fig.height = 3}
 heading(labels = c("pa-", "ra-", "die-", "sisch"))
 ```
 
@@ -514,7 +515,7 @@ heading(labels = c("pa-", "ra-", "die-", "sisch"))
 
 Finally, the `url_unikn()` function allows formatting URLs the uni.kn way: 
 
-```{r url-post, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 2}
+```{r url-post, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, out.width = "200px", fig.height = 2}
 my_url <- url_unikn("https://www.uni-konstanz.de/")  # input URL as copied from web browser
 
 post(labels = my_url, x = .2, y = .1, font = 4, new_plot = "xbox")
@@ -528,7 +529,7 @@ For example:
 
 - Using the color palettes of academic institutions (see the vignette on [Institutional colors](https://hneth.github.io/unikn/articles/color_inst.html)) with text decoration functions: 
 
-```{r others-txt-demo, echo = FALSE, eval = TRUE, fig.align = 'center', fig.width = 4.5, fig.height = 3}
+```{r others-txt-demo, echo = FALSE, eval = TRUE, fig.align = 'center', out.width = "500px", fig.width = 4.5, fig.height = 3}
 x_pos <- .70
 
 # A. Using uni_freiburg_br and uni_freiburg_blue: 
@@ -558,7 +559,7 @@ mark(labels = c("Dem Anwenden", "muss das Erkennen", "vorausgehen."),
 
 - Using the color palette `pal_google` (defined above): 
 
-```{r others-google, echo = FALSE, fig.align = 'center', fig.width = 3, fig.height = 2.2}
+```{r others-google, echo = FALSE, fig.align = 'center', out.width = "350px", fig.width = 3, fig.height = 2.2}
 # D. Google
 # seecol(pal_google)  # defined above
 
