--- a/vignettes/color_inst.Rmd
+++ b/vignettes/color_inst.Rmd
@@ -63,6 +63,7 @@ In addition to the specific color palettes of the [University of Konstanz](https
 - [ETH Zurich](https://ethz.ch/): `eth_pal`, `eth_pal_light`, `eth_pal_grey`
 - [Max Planck Society](https://www.mpg.de/en): `mpg_pal`
 - [University of Freiburg](https://uni-freiburg.de/): `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info`  
+- [University of Göttingen](https://uni-goettingen.de/): `uni_goettingen_1`, `uni_goettingen_2`, `uni_goettingen_3`
 - [University of Konstanz](https://www.uni-konstanz.de/): `uni_konstanz`, `uni_konstanz_pref`
 - [Princeton University](https://www.princeton.edu/): `uni_princeton_0`, `uni_princeton_1`, `uni_princeton_2` 
 
