--- a/README.Rmd
+++ b/README.Rmd
@@ -97,7 +97,7 @@ The **unikn** contains two categories of color palettes:
 
 - 16\ palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design
 
-- 13\ additional color palettes from various institutions
+- 16\ additional color palettes from various institutions
 
 
 ### The colors of Konstanz University
@@ -214,14 +214,15 @@ seecol(pal_unikn_pair)   # palette of 16 paired colors (in 8 pairs)
 In addition to the 16\ specific color palettes of the [University of Konstanz](https://www.uni-konstanz.de/), 
 **unikn** currently provides color palettes of the following institutions: 
 
-- [ETH Zurich](https://ethz.ch/): `eth_pal`, `eth_pal_light`, `eth_pal_grey`
-- [Max Planck Society](https://www.mpg.de/en): `mpg_pal`
-- [University of Freiburg](https://uni-freiburg.de/): `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info`  
-- [University of Konstanz](https://www.uni-konstanz.de/): `uni_konstanz`, `uni_konstanz_pref`
+- [ETH Zurich](https://ethz.ch/): `eth_pal`, `eth_pal_light`, `eth_pal_grey` 
+- [Max Planck Society](https://www.mpg.de/en): `mpg_pal` 
+- [University of Freiburg](https://uni-freiburg.de/): `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info` 
+- [University of Göttingen](https://uni-goettingen.de/): `uni_goettingen_1`, `uni_goettingen_2`, `uni_goettingen_3` 
+- [University of Konstanz](https://www.uni-konstanz.de/): `uni_konstanz`, `uni_konstanz_pref` 
 - [Princeton University](https://www.princeton.edu/): `uni_princeton_0`, `uni_princeton_1`, `uni_princeton_2` 
 
 
-```{r seecol-add-pals, fig.width = 7.2, out.width = "550px", fig.align = 'center', fig.asp = .90}
+```{r seecol-add-pals, fig.width = 7.2, out.width = "550px", fig.align = 'center', fig.asp = .95}
 # Inspect additional/alternative color palettes:
 seecol("add")
 ```
