--- a/README.Rmd
+++ b/README.Rmd
@@ -95,16 +95,15 @@ devtools::install_github('hneth/unikn')
 
 The **unikn** contains two categories of color palettes: 
 
-- 16\ palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design
-
-- 19\ additional color palettes from various institutions
+- 16\ palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design 
+- 22\ additional color palettes from various institutions
 
 
 ### The colors of Konstanz University
 
 Originally, the **unikn** package primarily provided the 16\ color palettes of the [University of Konstanz](https://www.uni-konstanz.de/):
 
-```{r pal-all, fig.align = 'center', fig.width = 6, out.width = "600px", fig.asp = .90}
+```{r pal-all, fig.align = 'center', fig.width = 6, out.width = "550px", fig.asp = .90}
 seecol("all_unikn")
 ```
 
@@ -214,6 +213,7 @@ seecol(pal_unikn_pair)   # palette of 16 paired colors (in 8 pairs)
 In addition to the 16\ specific color palettes of the [University of Konstanz](https://www.uni-konstanz.de/), 
 **unikn** currently provides color palettes of the following institutions: 
 
+- [Caltech](https://www.caltech.edu/): `caltech_pal_1`, `caltech_pal_2`, `caltech_pal_3` 
 - [ETH Zurich](https://ethz.ch/): `eth_pal`, `eth_pal_light`, `eth_pal_grey` 
 - [Max Planck Society](https://www.mpg.de/en): `mpg_pal` 
 - [University of Freiburg](https://uni-freiburg.de/): `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info` 
@@ -222,7 +222,7 @@ In addition to the 16\ specific color palettes of the [University of Konstanz](h
 - [Princeton University](https://www.princeton.edu/): `uni_princeton_0`, `uni_princeton_1`, `uni_princeton_2` 
 - [University of Regensburg](https://www.uni-regensburg.de/): `uni_regensburg_1`, `uni_regensburg_2`, `uni_regensburg_3`
 
-```{r seecol-add-pals, fig.width = 7.2, out.width = "550px", fig.align = 'center', fig.asp = .95}
+```{r seecol-add-pals, fig.width = 7.2, out.width = "550px", fig.align = 'center', fig.asp = 1.2}
 # Inspect additional/alternative color palettes:
 seecol("add")
 ```
@@ -238,7 +238,8 @@ We are currently expanding the range of color palettes from other institutions:
 
 **Collecting color palettes**
 
-Are you using **unikn** to create **your own color palettes**?  
+- Are you using **unikn** to create **your own color palettes**? 
+
 If so, please **let us know** (e.g., by posting on this [GitHub issue](https://github.com/hneth/unikn/issues/11))!  
   
 We collect color palettes from other institutions to make them available to R users in future versions of **unikn**.  
@@ -420,10 +421,10 @@ The `simcol()` and `grepal()` functions of **unikn** address both situations.
 
 #### Finding similar colors with `simcol()`
 
-- Which colors are similar to the "orange" of `uni_princeton_0`?
+- Which R colors are similar to the "Princeton orange" of the `uni_princeton_0` palette?
 
 ```{r simcol-example, fig.width = 5, out.width = "500px", fig.asp = .9, fig.align = 'center'}
-simcol(col_target = uni_princeton_0["orange"], tol = 30)
+simcol(col_target = uni_princeton_0["Princeton orange"], tol = 30)
 ```
 
 By default, `simcol()` considers all unique named `colors()` of\ R, but its search range can be adjusted by its `col_candiates`, `tol`, and `distinct` arguments. 
