--- a/vignettes/color_inst.Rmd
+++ b/vignettes/color_inst.Rmd
@@ -60,18 +60,20 @@ library('unikn')             # load the package
 In addition to the specific color palettes of the [University of Konstanz](https://www.uni-konstanz.de/), 
 **unikn** currently provides the general color palettes of the following institutions: 
 
-- [ETH Zurich](https://ethz.ch/): `eth_pal`, `eth_pal_light`, `eth_pal_grey`
-- [Max Planck Society](https://www.mpg.de/en): `mpg_pal`
-- [University of Freiburg](https://uni-freiburg.de/): `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info`  
-- [University of Göttingen](https://uni-goettingen.de/): `uni_goettingen_1`, `uni_goettingen_2`, `uni_goettingen_3`
-- [University of Konstanz](https://www.uni-konstanz.de/): `uni_konstanz`, `uni_konstanz_pref`
+- [Caltech](https://www.caltech.edu/): `caltech_pal_1`, `caltech_pal_2`, `caltech_pal_3` 
+- [ETH Zurich](https://ethz.ch/): `eth_pal`, `eth_pal_light`, `eth_pal_grey` 
+- [Humboldt University Berlin](https://www.hu-berlin.de/en): `hu_pal_1`, `hu_pal_2`  
+- [Max Planck Society](https://www.mpg.de/en): `mpg_pal` 
+- [University of Freiburg](https://uni-freiburg.de/): `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info` 
+- [University of Göttingen](https://uni-goettingen.de/): `uni_goettingen_1`, `uni_goettingen_2`, `uni_goettingen_3` 
+- [University of Konstanz](https://www.uni-konstanz.de/): `uni_konstanz`, `uni_konstanz_pref` 
 - [Princeton University](https://www.princeton.edu/): `uni_princeton_0`, `uni_princeton_1`, `uni_princeton_2` 
-- [University of Regensburg](https://www.uni-regensburg.de/): `uni_regensburg_1`, `uni_regensburg_2`, `uni_regensburg_3` 
+- [University of Regensburg](https://www.uni-regensburg.de/): `uni_regensburg_1`, `uni_regensburg_2`, `uni_regensburg_3`
 
-These palettes are exported (as named vectors) and documented (to credit their contributors and sources). 
+These 24 palettes are exported (as named vectors) and documented (to credit their contributors and sources). 
 We can use and modify these palettes with the **unikn** [color functions](colors.html):
 
-```{r show-add-pals, fig.width = 7.5, out.width = "85%", fig.asp = .90}
+```{r show-add-pals, fig.width = 7.2, out.width = "80%", fig.asp = 1.4}
 seecol("add", main = "Color palettes from various institutions")
 ```
 
