update after including new palettes

--- a/README.Rmd
+++ b/README.Rmd
@@ -96,7 +96,7 @@ devtools::install_github('hneth/unikn')
 The **unikn** contains two categories of color palettes: 
 
 - 16\ palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design 
-- 24\ additional color palettes from various institutions
+- 27\ additional color palettes from various institutions
 
 
 ### The colors of Konstanz University
@@ -221,9 +221,12 @@ In addition to the 16\ specific color palettes of the [University of Konstanz](h
 - [University of Göttingen](https://uni-goettingen.de/): `uni_goettingen_1`, `uni_goettingen_2`, `uni_goettingen_3` 
 - [University of Konstanz](https://www.uni-konstanz.de/): `uni_konstanz`, `uni_konstanz_pref` 
 - [Princeton University](https://www.princeton.edu/): `uni_princeton_0`, `uni_princeton_1`, `uni_princeton_2` 
-- [University of Regensburg](https://www.uni-regensburg.de/): `uni_regensburg_1`, `uni_regensburg_2`, `uni_regensburg_3`
+- [University of Regensburg](https://www.uni-regensburg.de/): `uni_regensburg_1`, `uni_regensburg_2`, `uni_regensburg_3` 
+- [Rensselaer Polytechnic Institute](https://www.rpi.edu/): `rpi_pal_1`, `rpi_pal_2`, `rpi_pal_3`
 
-```{r seecol-add-pals, fig.width = 7.2, out.width = "550px", fig.align = 'center', fig.asp = 1.2}
+<!-- Note: Duplicate image in vignette color_inst.Rmd -->
+
+```{r seecol-add-pals, fig.width = 7.2, out.width = "550px", fig.align = 'center', fig.asp = 1.4}
 # Inspect additional/alternative color palettes:
 seecol("add")
 ```
