--- a/README.Rmd
+++ b/README.Rmd
@@ -98,7 +98,7 @@ devtools::install_github('hneth/unikn')
 The **unikn** contains two categories of color palettes: 
 
 - 16\ palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design 
-- 38\ additional color palettes from various institutions
+- 40\ additional color palettes from various institutions
 
 
 ### The colors of Konstanz University
@@ -220,6 +220,7 @@ In addition to the 16\ specific color palettes of the [University of Konstanz](h
 - [Free University Berlin](https://www.fu-berlin.de/en/index.html): `fu_pal_0`, `fu_pal_1`, `fu_pal_2`, `fu_pal_3` 
 - [Humboldt University Berlin](https://www.hu-berlin.de/en): `hu_pal_1`, `hu_pal_2` 
 - [Max Planck Society](https://www.mpg.de/en): `mpg_pal` 
+- [University of Bonn](https://www.uni-bonn.de/en): `uni_bonn_1`, `uni_bonn_2` 
 - [University of Freiburg](https://uni-freiburg.de/): `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info` 
 - [University of Göttingen](https://uni-goettingen.de/): `uni_goettingen_1`, `uni_goettingen_2`, `uni_goettingen_3` 
 - [University of Hamburg](https://www.uni-hamburg.de/): `uni_hamburg_1`, `uni_hamburg_2` 
@@ -236,7 +237,7 @@ In addition to the 16\ specific color palettes of the [University of Konstanz](h
 seecol("add")
 ```
 
-These 38\ palettes are exported (as named vectors), documented (to credit their contributors and sources), and can easily be used and modified by the R community (e.g., in visualizations).
+These 40\ palettes are exported (as named vectors), documented (to credit their contributors and sources), and can easily be used and modified by the R community (e.g., in visualizations).
 
 
 <!-- Collecting contributed color palettes: -->
